# roxigraph

./: DESCRIPTION  LICENSE  MD5  NAMESPACE  NEWS.md  README.md  cleanup
R/: extendr-wrappers.R  roxigraph-package.R  store.R
inst/: AUTHORS  WORDLIST
inst/doc/: roxigraph.R  roxigraph.Rmd  roxigraph.html
man/: rdf_add.Rd  rdf_load.Rd  rdf_load_file.Rd  rdf_remove.Rd  rdf_serialize.Rd  rdf_size.Rd  rdf_store.Rd  rdf_store_dump.Rd  rdf_store_insert.Rd  rdf_store_load.Rd  rdf_store_new.Rd  rdf_store_open.Rd  rdf_store_query.Rd  rdf_store_remove.Rd  rdf_store_size.Rd  rdf_store_update.Rd  roxigraph-package.Rd  sparql_query.Rd  sparql_update.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  roxigraph-win.def
src/rust/: Cargo.toml  vendor-authors.R
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-parsing.R  test-query.R  test-serialize.R  test-store.R  test-update.R
